right_sidebar: Fix full name overflowing its container.
User's name with status emoji was overflowing its container,
resulting in overflown text to not be converted into ellipsis
and pushing status emoji out of visible area.

--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -109,6 +109,11 @@
     flex-direction: row;
 }
 
+.user-name-and-status-wrapper {
+    display: block;
+    width: 100%;
+}
+
 .user-presence-link {
     width: calc(100% - 24px);
 
